rf002 - Impl default topPanel